# trimesh-bug

./: README.md  pyproject.toml  setup.bash
trimesh-bug/: main.py
trimesh-bug/assets/: cube.mtl  cubes-imported.blend
